# fracdiff

./: Makefile  pyproject.toml
.github/workflows/: ci.yml
fracdiff/: fdiff.py
tests/: test_torch.py
