[tool.poetry]
name = "fracdiff"
# version bump to mark Python 3.12+ support
version = "0.9.2"
description = "Super-fast fractional differentiation."
authors = ["Shota Imaki <shota.imaki.0801@gmail.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/fracdiff/fracdiff"

[tool.poetry.dependencies]
# allow installation sur Python 3.11+ (compatible scipy 1.17.1 et numpy 2.2.6)
python = ">=3.11,<3.13"
numpy = "^2.2.6"
scipy = "^1.17.1"
statsmodels = "^0.14.6"
scikit-learn = {version = "^1.2.1", optional = true}
torch = { version = "^2.7.0", optional = true, markers = "python_version >= '3.10'" }

[tool.poetry.extras]
scikit-learn = ["scikit-learn"]
torch = ["torch"]
dev = ["scikit-learn", "torch"]

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^4.0.0"
codecov = "^2.1.11"
black = "^23.1"
isort = "^5.8.0"
Sphinx = "^5.3.0"
furo = "^2022.1.2"
sphinx-autobuild = "^2021.3.14"
sphinx-copybutton = "^0.5.0"
mypy = "^0.991"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
force_single_line = true
